Salesforce/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Process1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-Discovery</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>aaaaaaaaaaa</fullName>
        <description>dcdsvjf</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATE_TEXT__c</fullName>
        <formula>IF( DAY( CloseDate )&lt;=15 , &apos;Ready&apos;, &apos;Delayed&apos;)</formula>
        <label>DATE TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIFF_MIN_MAX__c</fullName>
        <formula>((MAX_DATE_ON_OPP_PRO__c-MIN_DATE_OF_OPP_PRODUCTS__c) * 12) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DIFF MIN MAX</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Displays the percentage that will be subtracted from the total amount of the opportunity.</description>
        <inlineHelpText>If the customer is getting a discount on this opportunity, enter the amount here. For example, if the discount is ten percent, enter the whole number 10.</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount Percent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <description>Calculates the opportunity amount after any discount has been applied.</description>
        <formula>Amount * ( 1 - Discount_Percentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity amount after discount has been applied.</inlineHelpText>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMPLOYEES__c</fullName>
        <label>EMPLOYEES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_DATE_CORRECT__c</fullName>
        <label>END DATE CORRECT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FISCAL_QUARTER_PERIOD__c</fullName>
        <formula>IF( 
AND( CloseDate&gt;=DATE(2014,12,28),CloseDate&lt;=DATE(2015,12,26) ),


IF(

AND(CloseDate&gt;= DATE(2014,12,28),CloseDate&lt;= DATE(2015,3,28)),IF(
AND(CloseDate&gt;= DATE(2014,12,28),CloseDate&lt;= DATE(2015,1,31)),

CASE(CloseDate,DATE(2014,12,28),&quot;Q1:PEROD 1:MONTH=DEC2014 FYJAN 15&quot;,DATE(2014,12,29),&quot;Q1:PEROD 1:MONTH=DEC2014 FYJAN 15&quot;,DATE(2014,12,30),&quot;Q1:PEROD 1:MONTH=DEC2014 FY JAN15&quot;,DATE(2014,12,31),&quot;Q1:PEROD 1:MONTH=DEC2014 FYJAN 15&quot;,&quot;Q1:PERIOD 1:MONTH=JAN15&quot;),
IF(
AND(CloseDate&gt;= DATE(2015,2,1),CloseDate&lt;= DATE(2015,2,28)),&quot;Q1 : PERIOD 2:FEB2015&quot;,&quot;Q1 : PERIOD 3:MAR2015&quot;
)
),

IF(AND(DATE(2015,3,29)&lt;=CloseDate ,CloseDate&lt;= DATE(2015,6,27)),IF(
AND(CloseDate&gt;= DATE(2015,3,29),CloseDate&lt;= DATE(2015,5,2)),

CASE(CloseDate,DATE(2015,3,29),&quot;Q2:PEROD 4:MONTH=MAR/APR 15&quot;,DATE(2015,3,30),&quot;Q2:PEROD 4:MONTH=MAR/APR15&quot;,DATE(2015,3,31),&quot;Q2:PEROD 4:MONTH=MAR/APR15&quot;,DATE(2015,5,1),&quot;Q2:PEROD 4:MONTH=APR/MAY15&quot;,DATE(2015,5,2),&quot;Q2:PEROD 4:MONTH=APR/MAY15&quot;,&quot;Q2:PERIOD 4:MONTH=APR15&quot;),

IF(
AND(CloseDate&gt;= DATE(2015,5,3),CloseDate&lt;= DATE(2015,5,30)),&quot;Q2 : PERIOD 5:MONTH=MAY&apos;15&quot;,

CASE(CloseDate,DATE(2015,5,31),&quot;Q2:PEROD 6:MONTH=MAY/JUN&apos;15&quot;,&quot;Q2:PEROD 6:MONTH=JUN&apos;15&quot;)
)),
IF(
AND(DATE(2015,6,28)&lt;=CloseDate,CloseDate&lt;=DATE(2015,9,26)),IF(
AND(CloseDate&gt;= DATE(2015,6,28),CloseDate&lt;= DATE(2015,8,1)),
CASE(CloseDate,DATE(2015,6,28),&quot;Q3:PERIOD 7:MONTH=JUN/JUL&apos;15&quot;,DATE(2015,6,29),
&quot;Q3:PERIOD 7:MONTH=JUN/JUL&apos;15&quot;,DATE(2015,6,30),&quot;Q3:PERIOD 7:MONTH=JUN/JUL&apos;15&quot;,DATE(2015,8,1),&quot;Q3:PERIOD 7:MONTH=JUL/AUG&apos;15&quot;,&quot;Q3:PERIOD 7:MONTH=JUL&apos;15&quot;),


IF(
AND(CloseDate&gt;= DATE(2015,8,2),CloseDate&lt;= DATE(2015,8,29)),&quot;Q3 : PERIOD 8:MONTH=AUG&apos;15&quot;,
CASE(CloseDate,DATE(2015,8,30),&quot;Q3 : PERIOD 9:MONTH=AUG/SEP&apos;15&quot;,&quot;Q3 : PERIOD 9:MONTH=SEP&apos;15&quot;)
)),
IF(
AND(CloseDate&gt;= DATE(2015,9,27),CloseDate&lt;= DATE(2015,10,31)),

CASE(CloseDate,DATE(2015,9,27),&quot;Q4:PEROD 10:MONTH=SEP/OCT15&quot;,DATE(2015,9,28),&quot;Q4:PEROD 10:MONTH=SEP/OCT15&quot;,DATE(2015,9,29),&quot;Q4:PEROD 10:MONTH=SEP/OCT&apos;15&quot;,DATE(2015,9,30),&quot;Q4:PEROD 10:MONTH=SEP/OCT&apos;15&quot;,&quot;Q4:PERIOD 10:MONTH=OCT&apos;15&quot;),
IF(
AND(CloseDate&gt;= DATE(2015,11,1),CloseDate&lt;= DATE(2015,11,28)),&quot;Q4 : PERIOD 11:MONTH=NOV&apos;15&quot;,

CASE(
CloseDate,DATE(2015,11,29),&quot;Q4:PEROD 12:MONTH=NOV/DEC&apos;15&quot;,DATE(2015,11,30),&quot;Q4:PEROD 12:MONTH=NOV/DEC&apos;15&quot;,&quot;Q4:PEROD 12:MONTH=DEC&apos;15&quot;
)

))
)
)
),IF(CloseDate&lt;DATE(2014,12,28),&quot;Q4:PERIOD 12:MONTH=DEC&apos;14&quot;,&quot;UPTO 2015 FISCAL YEAR &quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FISCAL QUARTER PERIOD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_YEAR_DIF__c</fullName>
        <formula>CloseDate - DATE(2014,12,28)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F YEAR DIF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_DATE_ON_OPP_PRO__c</fullName>
        <label>MAX DATE ON OPP PRO</label>
        <summarizedField>OpportunityLineItem.END_DATE_CORRECT__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MIN_DATE_OF_OPP_PRODUCTS__c</fullName>
        <label>MIN DATE OF OPP PRODUCTS</label>
        <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MONTH_NUMBER1__c</fullName>
        <defaultValue>1</defaultValue>
        <label>MONTH NUMBER1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIMPLE_F_YEAR__c</fullName>
        <formula>IF(  F_YEAR_DIF__c &lt;91,
IF( 
F_YEAR_DIF__c&lt;35,
 IF(F_YEAR_DIF__c&lt;0,&quot;O MY GOD&quot;, IF(F_YEAR_DIF__c&lt;4,&quot;Q1 : PERIOD 1 : DEC&apos;14 / JAN15&quot;,&quot;Q1 : PERIOD 1 : JAN&apos;15&quot;)),
  IF(AND(F_YEAR_DIF__c&gt;=35,F_YEAR_DIF__c&lt;63),&quot;Q1 : PERIOD 2 : FEB&apos;15&quot;,&quot;Q1 : PERIOD 3 : MAR&apos;15&quot;)
),

IF(
F_YEAR_DIF__c&lt;182,

IF( 
F_YEAR_DIF__c&lt;126 ,
  IF(F_YEAR_DIF__c&lt;94,&quot;Q2 : PERIOD 4 : MAR / APR&apos;15&quot;,&quot;Q2 : PERIOD 4 : APR&apos;15&quot;),
  IF(AND(F_YEAR_DIF__c&gt;=126,F_YEAR_DIF__c&lt;154),&quot;Q2 : PERIOD 5 : MAY&apos;15&quot;,&quot;Q2 : PERIOD 6 : JUN&apos;15&quot;)
),

IF( F_YEAR_DIF__c&lt;273,

IF( 
F_YEAR_DIF__c&lt;217 ,
  IF(F_YEAR_DIF__c&lt;185,&quot;Q3 : PERIOD 7 : JUN / JUL&apos;15&quot;,
  IF(F_YEAR_DIF__c&lt;216,&quot;Q3 : PERIOD 7 : JUL&apos;15&quot;,&quot;Q3 : PERIOD 7 : JUL/AUG&apos;15&quot;)),


  IF(AND(F_YEAR_DIF__c&gt;=217,F_YEAR_DIF__c&lt;245),&quot;Q3 : PERIOD 8 : AUG&apos;15&quot;,

IF(F_YEAR_DIF__c&lt;247,&quot;Q3 : PERIOD 9 : AUG/SEP&apos;15&quot;,&quot;Q3 : PERIOD 9 : SEP&apos;15&quot;))

),


IF(F_YEAR_DIF__c&lt;364,

IF(F_YEAR_DIF__c&lt;277,&quot;Q4 : PERIOD 10 : SEP/OCT&apos;15&quot;,IF(F_YEAR_DIF__c&lt;308,&quot;Q4 : PERIOD 10 : OCT&apos;15&quot;,IF(F_YEAR_DIF__c&lt;336,&quot;Q4 : PERIOD 11 : NOV&apos;15&quot;,IF(F_YEAR_DIF__c&lt;338,&quot;Q4 : PERIOD 12 : NOV/DEC&apos;15&quot;,&quot;Q4 : PERIOD 12 : DEC&apos;15&quot;)))),&quot;O MY GOD &quot;

)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLE F YEAR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAGE_PRE_VAL__c</fullName>
        <label>STAGE PRE VAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAGE_VALUE__c</fullName>
        <label>STAGE VALUE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_DATE__c</fullName>
        <label>START DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>NOT OPEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED NOT CONVERTED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TOTALEMP__c</fullName>
        <label>TOTALEMP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TOT</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_emp_including_parent__c</fullName>
        <label>total emp(including parent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Re1</fullName>
        <active>true</active>
        <businessProcess>Process1</businessProcess>
        <label>Re1</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SD_VAL</fullName>
        <active>false</active>
        <errorConditionFormula>START_DATE__c &lt; CloseDate</errorConditionFormula>
        <errorDisplayField>START_DATE__c</errorDisplayField>
        <errorMessage>START DATE SHOULD NOT BE LESS THAN CD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAL_ON_MONTH</fullName>
        <active>false</active>
        <errorConditionFormula>MONTH_NUMBER1__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>MONTH_NUMBER1__c</errorDisplayField>
        <errorMessage>number shoud not be &lt;=0</errorMessage>
    </validationRules>
</CustomObject>